src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Hazardous_Substances__c</fullName>
        <inlineHelpText>Are any hazardous substances used, treated, or stored on the property?</inlineHelpText>
        <label>Hazardous Substances</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_did_I_find_CleanQuote__c</fullName>
        <label>How did I find CleanQuote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CleanFund Team Member</fullName>
                </value>
                <value>
                    <fullName>News Article</fullName>
                </value>
                <value>
                    <fullName>Internet Search</fullName>
                </value>
                <value>
                    <fullName>CleanFund Email Marketing</fullName>
                </value>
                <value>
                    <fullName>PACE Nation</fullName>
                </value>
                <value>
                    <fullName>Colleague or Industry Professional</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Identified_Date__c</fullName>
        <description>For Legacy identified data</description>
        <label>Identified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Improvement_Cost_Est__c</fullName>
        <label>C-PACE Project Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Improvement_Type__c</fullName>
        <label>Improvement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>HVAC</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Envelope</fullName>
                </value>
                <value>
                    <fullName>Roofing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incorporating_Energy_Storage__c</fullName>
        <inlineHelpText>Does the Solar Solutions Incorporate Energy Storage.</inlineHelpText>
        <label>Incorporating Energy Storage?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indicative_Interest_Rate__c</fullName>
        <description>First cut interest rate from Prospecting Initiative, for cold intro term sheet.</description>
        <inlineHelpText>First cut interest rate from Prospecting Initiative, for cold intro term sheet.</inlineHelpText>
        <label>Indicative Interest Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Indicative_Interest_Rate_at_Quote__c</fullName>
        <label>Indicative Interest Rate at Quote</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Indicative_Quote_Sent_Date__c</fullName>
        <label>Indicative Quote Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Cost__c</fullName>
        <inlineHelpText>What is the cost of installing the Solar?</inlineHelpText>
        <label>Installation Cost ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Involuntary_Lien_Comment__c</fullName>
        <inlineHelpText>If Yes a brief description</inlineHelpText>
        <label>Involuntary Lien Comment</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Involuntary_Liens__c</fullName>
        <inlineHelpText>Are there any Involuntary liens recorded on the property?</inlineHelpText>
        <label>Involuntary Liens</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_a_groundlease_in_place_c__c</fullName>
        <label>Is there a ground lease in place</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Member_Token__c</fullName>
        <description>LinkedIn Id of the member/lead</description>
        <label>LinkedIn Member Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Stage_Change_Date__c</fullName>
        <label>Last Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Payments_Deliquencies_1st__c</fullName>
        <label>Late Payments/Deliquencies (1st)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Late_Payments_Deliquencies_2nd__c</fullName>
        <label>Late Payments/Deliquencies (2nd)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadGen_Tier__c</fullName>
        <label>LeadGen Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Comments__c</fullName>
        <label>Lead Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Notes__c</fullName>
        <label>Lead Owner Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Published__c</fullName>
        <description>Date lead was made known to Clean Fund</description>
        <label>Lead Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Stage_text__c</fullName>
        <formula>TEXT( Stage__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Stage (text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name_of_Property_Owner__c</fullName>
        <label>Legal Name of Property Owner</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lender_Type_1st__c</fullName>
        <label>Lender Type 1st</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lender_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lender_Type_2nd__c</fullName>
        <label>Lender Type 2nd</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lender_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <description>LinkedIn contact info for leadgen</description>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Market_Value__c</fullName>
        <inlineHelpText>This is the property owner&apos;s reported estimate of the market value.</inlineHelpText>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>More_than_2_Lenders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>More than 2 Lenders?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>More_than_2_Mortgages__c</fullName>
        <label>More Than 2 Mortgages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mortgage_Delinquencies_or_Default_Commen__c</fullName>
        <inlineHelpText>Owner comment on if, currently, or in the prior three years, there been any late payments, mortgage delinquencies, or has a notice of default been filed against the Property (whether rescinded or not?)</inlineHelpText>
        <label>Mortgage Delinquencies or Default Commen</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mortgage_Lender_1st__c</fullName>
        <inlineHelpText>Who holds the first mortgage?</inlineHelpText>
        <label>Mortgage Lender (1st)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgage_Lender_2nd__c</fullName>
        <label>Mortgage Lender (2nd)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mortgages_Current_Comment__c</fullName>
        <label>Mortgages Current Comment</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Quote_Date__c</fullName>
        <description>The most recent date a quote was given to the Property Owner</description>
        <inlineHelpText>The most recent date a quote was given to the Property Owner</inlineHelpText>
        <label>Most Recent Quote Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multiple_Owner_Entities__c</fullName>
        <inlineHelpText>Are there multiple entities on the Property&apos;s ownership title?</inlineHelpText>
        <label>Multiple Owner Entities?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Sr_Lender__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if you want to include this property in the weekly lender report!</description>
        <label>Needs Sr Lender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Step_History__c</fullName>
        <label>Next Step History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_Step_Tickler__c</fullName>
        <label>Next Step Tickler</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Update_Time__c</fullName>
        <label>Next Steps Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Parcels__c</fullName>
        <inlineHelpText>What are the number of parcels associated with this property?</inlineHelpText>
        <label>Number of Parcels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rooms__c</fullName>
        <description>Number of hotel rooms (when applicable)</description>
        <label>Number of Rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupancy_Rate__c</fullName>
        <description>Occupancy rate, as noted on the most recent rent roll. If the property is owner occupied, and the only tenant, enter 100%.</description>
        <inlineHelpText>Occupancy rate, as noted on the most recent rent roll. If the property is owner occupied, and the only tenant, enter 100%.</inlineHelpText>
        <label>Occupancy Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opp_Lead_Source__c</fullName>
        <inlineHelpText>Will be used when lead is converted to an opportunity</inlineHelpText>
        <label>Opp Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate</fullName>
                </value>
                <value>
                    <fullName>Channel Partner</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>Existing Account Contacts</fullName>
                </value>
                <value>
                    <fullName>External Referral</fullName>
                </value>
                <value>
                    <fullName>Inbound Phone</fullName>
                </value>
                <value>
                    <fullName>Journal</fullName>
                </value>
                <value>
                    <fullName>Marketing Campaign</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PACE Program</fullName>
                </value>
                <value>
                    <fullName>Prior Relationship</fullName>
                </value>
                <value>
                    <fullName>UNKNOWN</fullName>
                </value>
                <value>
                    <fullName>Web Search</fullName>
                </value>
                <value>
                    <fullName>Website Inquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_Project_Scope__c</fullName>
        <label>Opp Project Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Construction</fullName>
                </value>
                <value>
                    <fullName>Upgrade/Retrofit</fullName>
                </value>
                <value>
                    <fullName>Gut Rehab</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_Sub_Lead_Source__c</fullName>
        <inlineHelpText>Sub Lead Source Used when the lead is converted to an opp</inlineHelpText>
        <label>Opp Sub Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Identifier__c</fullName>
        <description>To hold the identifier info in case we want it for later</description>
        <label>Opportunity Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originations_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originations Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Property_Description__c</fullName>
        <inlineHelpText>If other property type is required</inlineHelpText>
        <label>Other Property Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Out_of_Dormancy_Trigger__c</fullName>
        <label>Out-of-Dormancy Trigger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Bankruptcy_Comment__c</fullName>
        <inlineHelpText>Owner comment on if the Owner Entity (or its Corporate Parent) has been involved in, or subject to, bankruptcy proceedings of any kind in the prior seven years?</inlineHelpText>
        <label>Owner Bankruptcy Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Bankruptcy__c</fullName>
        <inlineHelpText>Has the Owner Entity (or its Corporate Parent) been involved in, or subject to, bankruptcy proceedings of any kind in the prior seven years?</inlineHelpText>
        <label>Owner Bankruptcy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Entity_City__c</fullName>
        <inlineHelpText>City of the Ownership Entity</inlineHelpText>
        <label>Owner Entity City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Entity_State__c</fullName>
        <inlineHelpText>Owner entity state</inlineHelpText>
        <label>Owner Entity State</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Entity_Street_Address__c</fullName>
        <inlineHelpText>Street Address for the Ownership Entity on Property title</inlineHelpText>
        <label>Owner Entity Street Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Entity_Zip_Code__c</fullName>
        <inlineHelpText>Zip code for the owner entity</inlineHelpText>
        <label>Owner Entity Zip Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Occupied__c</fullName>
        <label>Owner Occupied</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Type_2__c</fullName>
        <label>Owner Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>REIT</fullName>
                </value>
                <value>
                    <fullName>Developer/Owner-RGNL</fullName>
                </value>
                <value>
                    <fullName>Private REIT</fullName>
                </value>
                <value>
                    <fullName>Pension Fund</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Corporate/User</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Investment Manager</fullName>
                </value>
                <value>
                    <fullName>Equity Funds</fullName>
                </value>
                <value>
                    <fullName>Data Centers</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Bank/Finance</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Educational</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Insurance Manager</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Property Manager</fullName>
                </value>
                <value>
                    <fullName>Sovereign Wealth Fund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <description>Choose ownership structure.</description>
        <label>Owner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>REIT</fullName>
                </value>
                <value>
                    <fullName>Developer/Owner-RGNL</fullName>
                </value>
                <value>
                    <fullName>Private REIT</fullName>
                </value>
                <value>
                    <fullName>Pension Fund</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>Corporate/User</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Investment Manager</fullName>
                </value>
                <value>
                    <fullName>Equity Funds</fullName>
                </value>
                <value>
                    <fullName>Data Centers</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Bank/Finance</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Educational</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Insurance Manager</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Property Manager</fullName>
                </value>
                <value>
                    <fullName>Sovereign Wealth Fund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_as_Defendant_Comments__c</fullName>
        <inlineHelpText>Owner comments on if the Owner Entity (or its Corporate Parent) is a defendant in any active or pending litigation/lawsuits?</inlineHelpText>
        <label>Owner as Defendant Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_as_Defendant__c</fullName>
        <inlineHelpText>Is the Owner Entity (or its Corporate Parent) a defendant in any active or pending litigation/lawsuits?</inlineHelpText>
        <label>Owner as Defendant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_has_tax_appetite__c</fullName>
        <inlineHelpText>The owner is interested in tax credits.</inlineHelpText>
        <label>Owner has tax appetite?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PACE_Program__c</fullName>
        <description>Relevant PACE Programs that apply to project.</description>
        <inlineHelpText>Choose all PACE Programs project can be completed under.</inlineHelpText>
        <label>PACE Program</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Property_State__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AE2</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor PACE</fullName>
                </value>
                <value>
                    <fullName>Better Buildings Northwest Ohio</fullName>
                </value>
                <value>
                    <fullName>CaliforniaFIRST</fullName>
                </value>
                <value>
                    <fullName>CEDA</fullName>
                </value>
                <value>
                    <fullName>CEFIA</fullName>
                </value>
                <value>
                    <fullName>Clean Energy Atlanta</fullName>
                </value>
                <value>
                    <fullName>Clean Energy Chula Vista</fullName>
                </value>
                <value>
                    <fullName>Clean Energy Green Corridor, Miami-Dade</fullName>
                </value>
                <value>
                    <fullName>Clean Energy Sacramento</fullName>
                </value>
                <value>
                    <fullName>Commercial HERO PACE Program</fullName>
                </value>
                <value>
                    <fullName>Commercial PACEDirect</fullName>
                </value>
                <value>
                    <fullName>CO-PACE</fullName>
                </value>
                <value>
                    <fullName>CT-PACE</fullName>
                </value>
                <value>
                    <fullName>DC PACE</fullName>
                </value>
                <value>
                    <fullName>Energize NY</fullName>
                </value>
                <value>
                    <fullName>FigTree</fullName>
                </value>
                <value>
                    <fullName>Florida PACE Funding Agency Program</fullName>
                </value>
                <value>
                    <fullName>Greater Cincinnati Energy Alliance</fullName>
                </value>
                <value>
                    <fullName>Green Energy Works</fullName>
                </value>
                <value>
                    <fullName>GreenFinanceSF</fullName>
                </value>
                <value>
                    <fullName>Howard County PACE Program</fullName>
                </value>
                <value>
                    <fullName>KY PACE</fullName>
                </value>
                <value>
                    <fullName>LA PACE</fullName>
                </value>
                <value>
                    <fullName>LCEID</fullName>
                </value>
                <value>
                    <fullName>Lean and Green Michigan</fullName>
                </value>
                <value>
                    <fullName>Leon County Commercial PACE Program</fullName>
                </value>
                <value>
                    <fullName>MCED</fullName>
                </value>
                <value>
                    <fullName>Milwaukee Energy Efficiency (ME2)</fullName>
                </value>
                <value>
                    <fullName>Minnesota Edina Emerald Energy Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PPA__c</fullName>
        <inlineHelpText>Does this project include a PPA?</inlineHelpText>
        <label>PPA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Company__c</fullName>
        <label>Partner Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <label>Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_First_Name__c</fullName>
        <label>Partner First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Last_Name__c</fullName>
        <label>Partner Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Phone__c</fullName>
        <label>Partner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pending_Proceedings_or_Lawsuits_Comments__c</fullName>
        <inlineHelpText>Owner comment on if there are any administrative proceedings or active or pending lawsuits concerning a releaste at the Property or adjacent properties?</inlineHelpText>
        <label>Pending Proceedings or Lawsuits Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pending_Proceedings_or_Lawsuits__c</fullName>
        <inlineHelpText>Have there been any administrative proceedings or active or pending lawsuits concerning a release at the Property or adjacent properties?</inlineHelpText>
        <label>Pending Proceedings or Lawsuits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_to_Apply_for_Incentives__c</fullName>
        <inlineHelpText>Does the Property Owner plan to apply for incentives for the measures for which they&apos;re requesting PACE financing?</inlineHelpText>
        <label>Plan to Apply for Incentives?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Possible_matched_Accounts__c</fullName>
        <label>Possible matched Accounts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreQual_Date__c</fullName>
        <label>PreQual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prepayment__c</fullName>
        <label>Prepayment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5% (10), 4% (11), 3% (12), 2% (13), 1% (14)</fullName>
                </value>
                <value>
                    <fullName>5% (7), 4% (8), 3% (9), 2% (10), 1% (11)</fullName>
                </value>
                <value>
                    <fullName>4% (7), 3% (8), 2% (9), 1% (10)</fullName>
                </value>
                <value>
                    <fullName>5% (5), 4% (6), 3% (7), 2% (8), 1% (9)</fullName>
                </value>
                <value>
                    <fullName>4% (5), 3% (6), 2% (7), 1% (8)</fullName>
                </value>
                <value>
                    <fullName>3% (8), 2% (9), 1% (10)</fullName>
                </value>
                <value>
                    <fullName>5% (2) 3% (5) 2% (6)</fullName>
                </value>
                <value>
                    <fullName>Yield Maintenance (special)</fullName>
                </value>
                <value>
                    <fullName>Other (Please Specify in Project Notes)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Property_Owner_2__c</fullName>
        <label>Previous Property Owner 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Property_Owner__c</fullName>
        <description>Previous owner of the property</description>
        <inlineHelpText>If non, leave blank</inlineHelpText>
        <label>Previous Property Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Adjustment_Notes__c</fullName>
        <label>Pricing Adjustment Notes</label>
        <type>TextArea</type>
    </fields>
</CustomObject>